feat(spotify - dynamic feature cards rendred)

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -28,12 +28,12 @@
             <a href="" class="sub-text">Show all</a>
           </div>
 
-          <div class="cards-container">
-            <div class="card" role="button">
+          <div class="cards-container" id="feature-cards">
+            <!-- <div class="card" role="button">
               <div class="img-wrapper">
                 <img
                   class="card-img"
-                  src="./assets/images/feature-1.jpg"
+                  src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/spotify/assets/images/feature-1.jpg"
                   alt="feature-1"
                 />
                 <div class="play-btn-wrapper">
@@ -60,10 +60,11 @@
                   playlist.</span
                 >
               </div>
-            </div>
+            </div> -->
           </div>
         </section>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
