feat(spotify - static artists card implemented, artists images added, assets structure updated)

--- a/spotify/index.html
+++ b/spotify/index.html
@@ -20,7 +20,7 @@
   <body>
     <main class="main">
       <div class="container">
-        <section class="feature-section">
+        <section class="section feature-section">
           <div class="header">
             <a href="" class="hero-text">
               <h2>Featuring Shawn Mendes</h2>
@@ -29,15 +29,28 @@
           </div>
 
           <div class="cards-container" id="feature-cards">
-            <!-- <div class="card" role="button">
+            <!-- cards are rendered here -->
+          </div>
+        </section>
+
+        <section class="section artist-section">
+          <div class="header">
+            <a href="" class="hero-text">
+              <h2>Artists</h2>
+            </a>
+            <a href="" class="sub-text">Show all</a>
+          </div>
+          <div class="cards-container" id="artist-cards">
+            <!-- cards are rendered here -->
+            <div class="card" role="button">
               <div class="img-wrapper">
                 <img
                   class="card-img"
-                  src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/spotify/assets/images/feature-1.jpg"
+                  src="./assets/images/artist-1.jpeg"
                   alt="feature-1"
                 />
                 <div class="play-btn-wrapper">
-                  <span class="tooltip-text">Play This Is Shawn Mendes</span>
+                  <span class="tooltip-text">Play Shawn Mendes</span>
                   <button type="button" class="play-btn">
                     <svg
                       class="play-icon"
@@ -54,13 +67,10 @@
                 </div>
               </div>
               <div class="text">
-                <span class="hero-text">This Is Shawn Mendes</span>
-                <span class="sub-text"
-                  >This is Shawn Mendes. The essential tracks, all in one
-                  playlist.</span
-                >
+                <span class="hero-text">Shawn Mendes</span>
+                <span class="sub-text">Artist</span>
               </div>
-            </div> -->
+            </div>
           </div>
         </section>
       </div>
