--- a/spotify/index.html
+++ b/spotify/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <main class="main">
-      <div class="container">
+      <div class="custom-container">
         <section class="section feature-section">
           <div class="header">
             <a href="" class="hero-text">
