feat(iphone-whatsapp - assets structured improved)

--- a/iphone-whatsapp/index.html
+++ b/iphone-whatsapp/index.html
@@ -356,7 +356,7 @@
             <li class="item">
               <img
                 class="communities-icon"
-                src="./assets/images/communities-icon 2 Background Removed.png"
+                src="./assets/images/communities-icon.png"
                 alt="communities-icon"
               />
               <span>Communities</span>
