feat(iphone-whatsapp - chat avtar icon url provided)

--- a/iphone-whatsapp/index.html
+++ b/iphone-whatsapp/index.html
@@ -92,7 +92,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-1.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-1.jpg"
                 alt="chat-1"
               />
               <div class="chat-content">
@@ -113,7 +113,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-2.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-2.jpg"
                 alt="chat-2"
               />
               <div class="chat-content">
@@ -132,7 +132,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-3.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-3.jpg"
                 alt="chat-3"
               />
               <div class="chat-content">
@@ -150,7 +150,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-4.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-4.png"
                 alt="chat-4"
               />
               <div class="chat-content">
@@ -174,7 +174,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-5.jpeg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-5.jpeg"
                 alt="chat-5"
               />
               <div class="chat-content">
@@ -198,7 +198,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-6.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-6.jpg"
                 alt="chat-6"
               />
               <div class="chat-content">
@@ -214,7 +214,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-7.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-7.jpg"
                 alt="chat-7"
               />
               <div class="chat-content">
@@ -233,7 +233,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-8.jpeg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-8.jpeg"
                 alt="chat-8"
               />
               <div class="chat-content">
@@ -256,7 +256,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-9.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-9.jpg"
                 alt="chat-9"
               />
               <div class="chat-content">
@@ -272,7 +272,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-10.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-10.png"
                 alt="chat-10"
               />
               <div class="chat-content">
@@ -289,7 +289,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-11.jpg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-11.jpg"
                 alt="chat-11"
               />
               <div class="chat-content">
@@ -306,7 +306,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-12.jpeg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-12.jpeg"
                 alt="chat-12"
               />
               <div class="chat-content">
@@ -322,7 +322,7 @@
             <li class="chat">
               <img
                 class="user-img"
-                src="./assets/images/chat-13.jpeg"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/iphone-whatsapp/assets/images/chat-avatar-images/chat-13.jpeg"
                 alt="chat-13"
               />
               <div class="chat-content">
