feat(iphone-whatsapp - url provided for icon images)

--- a/iphone-whatsapp/index.html
+++ b/iphone-whatsapp/index.html
@@ -35,17 +35,17 @@
               <div class="icons">
                 <img
                   class="icon"
-                  src="./assets/images/network-icon.svg"
+                  src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/network-icon.svg"
                   alt="network-icon"
                 />
                 <img
                   class="icon"
-                  src="./assets/images/wifi-icon.svg"
+                  src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/wifi-icon.svg"
                   alt="wifi-icon"
                 />
                 <img
                   class="icon"
-                  src="./assets/images/battery-icon.svg"
+                  src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/battery-icon.svg"
                   alt="battery-icon"
                 />
               </div>
@@ -63,7 +63,7 @@
             <div class="input">
               <img
                 class="icon"
-                src="./assets/images/meta-ai-logo.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/meta-ai-logo.png"
                 alt="meta-ai-logo"
               />
               <input type="text" placeholder="Ask Meta AI or Search" />
@@ -162,7 +162,7 @@
                   <span class="chat-msg-text">
                     <img
                       class="icon"
-                      src="./assets/images/double-check-icon.png"
+                      src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/double-check-icon.png"
                       alt="double-check-icon"
                     />
                     <i class="fa-solid fa-camera"></i>
@@ -186,7 +186,7 @@
                   <span class="chat-msg-text">
                     <img
                       class="icon active"
-                      src="./assets/images/double-check-icon.png"
+                      src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/double-check-icon.png"
                       alt="double-check-icon"
                     />
                     <i class="fa-solid fa-camera"></i>
@@ -245,7 +245,7 @@
                   <span class="chat-msg-text">
                     <img
                       class="icon active"
-                      src="./assets/images/double-check-icon.png"
+                      src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/double-check-icon.png"
                       alt="double-check-icon"
                     />
                     Bro 💀
@@ -334,7 +334,7 @@
                   <span class="chat-msg-text">
                     <img
                       class="icon active"
-                      src="./assets/images/double-check-icon.png"
+                      src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/double-check-icon.png"
                       alt="double-check-icon"
                     />
 
@@ -346,23 +346,32 @@
           </ul>
           <ul class="footer">
             <li class="item">
-              <img src="./assets/images/updates-icon.png" alt="updates-icon" />
+              <img
+                src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/updates-icon.png"
+                alt="updates-icon"
+              />
               <span>Updates</span>
             </li>
             <li class="item">
-              <img src="./assets/images/calls-icon.png" alt="calls-icon" />
+              <img
+                src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/calls-icon.png"
+                alt="calls-icon"
+              />
               <span>Calls</span>
             </li>
             <li class="item">
               <img
                 class="communities-icon"
-                src="./assets/images/communities-icon.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/communities-icon.png"
                 alt="communities-icon"
               />
               <span>Communities</span>
             </li>
             <li class="item active current">
-              <img src="./assets/images/chats-icon.png" alt="chats-icon" />
+              <img
+                src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/chats-icon.png"
+                alt="chats-icon"
+              />
               <span>Chats</span>
               <div class="active-unread">
                 <span>4</span>
@@ -370,7 +379,7 @@
             </li>
             <li class="item">
               <img
-                src="./assets/images/settings-icon.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/30b52de44864248b0617b059a7fc7c0ebbcc0eda/iphone-whatsapp/assets/images/icons/settings-icon.png"
                 alt="settings-icon"
               />
               <span>Settings</span>
