feat(landing-page: github raw images url provided)

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,7 +10,10 @@
     <main class="main">
       <nav class="nav container">
         <a href="#" class="logo-image">
-          <img src="./assets/images/logo.png" alt="logo" />
+          <img
+            src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/logo.png"
+            alt="logo"
+          />
         </a>
         <div class="nav-content-wrapper">
           <ul class="nav-items">
@@ -30,20 +33,20 @@
           <div class="input">
             <img
               class="icon"
-              src="./assets/images/search-icon.svg"
+              src="https://raw.githubusercontent.com/khatri2002/codepen/41da6b21e53c3c6c4add8302e69d578ebac3ac67/landing-page/assets/images/search-icon.svg"
               alt="search-icon"
             />
             <input id="search" name="search" type="text" placeholder="Search" />
             <span class="separator"></span>
             <img
               class="icon bag-icon"
-              src="./assets/images/bag-icon.svg"
+              src="https://raw.githubusercontent.com/khatri2002/codepen/41da6b21e53c3c6c4add8302e69d578ebac3ac67/landing-page/assets/images/bag-icon.svg"
               alt="bag-icon"
             />
           </div>
           <img
             class="nav-product-img"
-            src="./assets/images/nachos-product.png"
+            src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/nachos-product.png"
             alt="nachos-product"
           />
         </div>
@@ -63,7 +66,7 @@
               <span>Flamin Hot</span> <span>Nachos</span>
             </h1>
             <img
-              src="./assets/images/chilli-picture.png"
+              src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/chilli-picture.png"
               alt=""
               class="decorative-chilli-img"
             />
@@ -76,7 +79,7 @@
             <button class="add-to-cart-btn">
               <div class="shopping-cart-icon">
                 <img
-                  src="./assets/images/shopping-cart.svg"
+                  src="https://raw.githubusercontent.com/khatri2002/codepen/41da6b21e53c3c6c4add8302e69d578ebac3ac67/landing-page/assets/images/shopping-cart.svg"
                   alt="shopping-cart"
                 />
               </div>
@@ -94,7 +97,7 @@
         <div class="product-img-wrapper">
           <img
             class="product-img"
-            src="./assets/images/nachos-product.png"
+            src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/nachos-product.png"
             alt="nachos-product"
           />
         </div>
@@ -102,7 +105,7 @@
           <li class="category category-chilli">
             <div class="category-img-wrapper">
               <img
-                src="./assets/images/chilli-picture.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/chilli-picture.png"
                 alt="chilli-picture"
               />
             </div>
@@ -110,14 +113,17 @@
           </li>
           <li class="category category-corn">
             <div class="category-img-wrapper">
-              <img src="./assets/images/corn-picture.png" alt="corn-picture" />
+              <img
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/corn-picture.png"
+                alt="corn-picture"
+              />
             </div>
             <span>Corn</span>
           </li>
           <li class="category category-spices">
             <div class="category-img-wrapper">
               <img
-                src="./assets/images/spices-picture.png"
+                src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/spices-picture.png"
                 alt="spices-picture"
               />
             </div>
@@ -126,7 +132,7 @@
         </ul>
         <img
           class="chilli-picture-decorative"
-          src="./assets/images/chilli-picture.png"
+          src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/landing-page/assets/images/chilli-picture.png"
           alt=""
         />
       </section>
