--- a/cards/index.html
+++ b/cards/index.html
@@ -32,7 +32,7 @@
       </div>
       <img
         class="avatar-img"
-        src="./assets/images/avatar-1.png"
+        src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/cards/assets/images/avatar-1.png"
         alt="avatar-1"
       />
     </div>
@@ -48,7 +48,7 @@
       </div>
       <img
         class="avatar-img"
-        src="./assets/images/avatar-2.png"
+        src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/cards/assets/images/avatar-2.png"
         alt="avatar-2"
       />
     </div>
@@ -64,7 +64,7 @@
       </div>
       <img
         class="avatar-img"
-        src="./assets/images/avatar-3.png"
+        src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/cards/assets/images/avatar-3.png"
         alt="avatar-3"
       />
     </div>
@@ -80,7 +80,7 @@
       </div>
       <img
         class="avatar-img"
-        src="./assets/images/avatar-4.png"
+        src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/cards/assets/images/avatar-4.png"
         alt="avatar-4"
       />
     </div>
@@ -96,7 +96,7 @@
       </div>
       <img
         class="avatar-img"
-        src="./assets/images/avatar-5.png"
+        src="https://raw.githubusercontent.com/khatri2002/codepen/refs/heads/main/cards/assets/images/avatar-5.png"
         alt="avatar-5"
       />
     </div>
